tests/should_pass/test_collatz.skj
fn collatz(np: u32) -> u32 {
    let mut n: u32 = np;
    let mut i: u32 = 0;
    while (n != 1) {
        n = n % 2 == 0 ? n / 2 : n * 3 + 1;
        i = i + 1;
    }

    return i;
}


fn main() -> i32 {
    return 1;
}
