tests/should_fail/test_for_loop_no_array.skj
fn main() -> u32 {
    for (i: i32 in 5) {
        return 0;
    }
    
    return 1;
}
